# zhmiscellany

./: MANIFEST.in  README.md  gd.md  pyproject.toml  setup.cfg
cpp_src/: fast_array_diff.cp310-win_amd64.pyd  fast_array_diff.cpp  setup.py
src/z.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/zhmiscellany/: __init__.py  _discord_supportfuncs.py  _fileio_supportfuncs.py  _misc_supportfuncs.py  _ocr_supportfuncs.py  _processing_supportfuncs.py  _resource_files_lookup.py  _state.py  _supportfuncs.py  cpp.py  dict.py  discord.py  fast_array_diff.cp310-win_amd64.pyd  fileio.py  gui.py  image.py  list.py  macro.py  math.py  misc.py  mousekb.py  netio.py  ocr.py  pastebin.py  pipes.py  processing.py  rust.py  string.py  z.pyi
zhmiscellanyrusteffect/: Cargo.toml
zhmiscellanyrusteffect/.env/Scripts/: activate  activate.bat
zhmiscellanyrusteffect/src/: lib.rs
zhmiscellanyrusteffect_no/: pyproject.toml
zhmiscellanyrusteffect_no/.env/: pyvenv.cfg
zhmiscellanyrusteffect_no/src/: lib.rs
