[metadata]
name = zhmiscellany
version = 6.3.9
author = zh
author_email = imnotgivingmyemailjustaddmeondiscordmydiscordisz_h_@zh.com
description = A collection of useful/interesting python libraries made by zh.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://discord.gg/ThBBAuueVJ
metadata_version = 2.2
project_urls =
    Bug Tracker = https://github.com/zen-ham/zhmiscellany/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows

[options]
install_requires =
    ray>=0
    pycryptodome>=0
    pywin32>=0; sys_platform == "win32"
    discum==1.1.0
    requests>=0
    random_header_generator>=0; sys_platform == "win32"
    dill>=0
    numpy>=0
    keyboard>=0
    psutil>=0
    kthread>=0
    pydirectinput>=0; sys_platform == "win32"
    pillow>=0
    fuzzywuzzy>=0
    orjson>=0
    pyautogui>=0; sys_platform == "linux"

package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src