[package]
name = "zhmiscellanyrusteffect"
version = "0.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zhmiscellanyrusteffect"
crate-type = ["cdylib"]

[dependencies]
jwalk = "0.8.1"
nalgebra = "0.33.2"
numpy = "0.23.0"
ordered-float = "5.0.0"
pyo3 = "0.23.3"
